<resources>
    <string name="app_name">FridgeFriend</string>
    <string name="add_item">Add Item</string>
    <string name="view_library">View Library</string>
    <string name="add">Add</string>
    <string name="name">Name</string>
    <string name="priority">Priority</string>
    <string name="amount_left">Amount Left</string>
    <string name="description">Description</string>
    <string name="expiration">Expiration</string>
    <string name="healthgroup">Health Group</string>
    <string name="price">Price</string>
    <string name="rating">Rating</string>
    <string name="preferences">preferences</string>
    <string name="remind_to_take_pictures_once_a_week">Remind to take pictures once a week</string>
    <string name="remind_when_food_is_going_to_expire">Remind when food is going to expire</string>
    <string name="remind_when_food_supply_is_low">Remind when food supply is low</string>
    <string name="save">Save</string>
    <string name="togglebutton">ToggleButton</string>
    <string name="days_before_expiration">days before expiration reminder</string>
    <string name="shopping_list">Shopping List</string>
    <string name="amount_left_reminder">amount left reminder</string>
    <string-array name="health_group">
        <item>Dairy</item>
        <item>Desserts</item>
        <item>Dressing</item>
        <item>Drinks</item>
        <item>Fish</item>
        <item>Fruits</item>
        <item>Grain</item>
        <item>Meat</item>
        <item>Oils</item>
        <item>Other</item>
        <item>Poultry</item>
        <item>Seasoning</item>
        <item>Snacks</item>
        <item>Vegetables</item>
    </string-array>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="name_of_food">Name of food</string>
    <string name="description_of_food">Description of Food</string>
    <string name="number_of_items_left">Number of items left</string>
    <string name="date_of_expiration">Date of expiration</string>
    <string name="price_for_one_item">Price for one item</string>
    <string name="enter_the_amount_of_food_left_before_you_want_to_be_reminded">Enter the amount of food left before you want to be reminded</string>
    <string name="enter_the_number_of_days_you_want_to_be_reminded_before_expiration">Enter the number of days you want to be reminded before expiration</string>
    <string name="view_fridge">View Fridge</string>
    <string name="both">Both</string>
    <string name="abc">ABC</string>
    <string name="fridge">Fridge</string>
</resources>
