<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.ebonycalloway.fridgefriend.View.Settings">

    <ToggleButton
        android:id="@+id/remindPicturesToggleButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/togglebutton"
        tools:layout_constraintTop_creator="1"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="16dp" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remind_to_take_pictures_once_a_week"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        android:layout_marginEnd="5dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="31dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginRight="5dp" />

    <ToggleButton
        android:id="@+id/remindExpireToggleButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/togglebutton"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/remindPicturesToggleButton"
        android:layout_marginTop="18dp"
        app:layout_constraintTop_toBottomOf="@+id/remindPicturesToggleButton"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/remindPicturesToggleButton"
        app:layout_constraintHorizontal_bias="1.0" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remind_when_food_is_going_to_expire"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="@+id/remindLowToggleButton"
        android:layout_marginEnd="9dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="98dp"
        android:layout_marginBottom="92dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginRight="9dp" />

    <ToggleButton
        android:id="@+id/remindLowToggleButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/togglebutton"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/remindExpireToggleButton"
        android:layout_marginTop="18dp"
        app:layout_constraintTop_toBottomOf="@+id/remindExpireToggleButton"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/remindExpireToggleButton"
        app:layout_constraintHorizontal_bias="0.0" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remind_when_food_supply_is_low"
        tools:layout_constraintRight_creator="1"
        android:layout_marginEnd="35dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@+id/remindLowToggleButton"
        tools:layout_constraintBaseline_creator="1"
        android:layout_marginRight="35dp" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="52dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <EditText
        android:id="@+id/dayseditText"
        android:layout_width="114dp"
        android:layout_height="47dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="24dp"
        android:ems="7"
        android:hint="@string/enter_the_number_of_days_you_want_to_be_reminded_before_expiration"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/remindLowToggleButton"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintTop_creator="1"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:text="@string/days_before_expiration"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11"
        tools:layout_constraintBaseline_creator="1"
        tools:layout_constraintLeft_creator="1" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="76dp"
        android:layout_marginRight="76dp"
        android:layout_marginBottom="8dp"
        android:text="@string/amount_left_reminder"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView12"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_constraintBaseline_creator="1"
        tools:layout_constraintLeft_creator="1" />

    <EditText
        android:id="@+id/amountLeftEditText"
        android:layout_width="118dp"
        android:layout_height="44dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="28dp"
        android:ems="7"
        android:hint="@string/enter_the_amount_of_food_left_before_you_want_to_be_reminded"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dayseditText"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintTop_creator="1"
        android:importantForAutofill="no" />
</android.support.constraint.ConstraintLayout>
