<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.ebonycalloway.fridgefriend.View.ShoppingList">

    <ListView
        android:id="@+id/shoppingList"
        android:layout_width="368dp"
        android:layout_height="300dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="208dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_marginTop="52dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    <RadioButton
        android:id="@+id/radioButton4"
        android:layout_width="110dp"
        android:layout_height="38dp"
        android:layout_marginTop="52dp"
        android:layout_weight="0.13"
        android:checked="true"
        android:text="@string/expiration"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioButton
        android:id="@+id/radioButton"
        android:layout_width="86dp"
        android:layout_height="38dp"
        android:layout_marginStart="124dp"
        android:layout_marginLeft="124dp"
        android:layout_marginTop="52dp"
        android:checked="false"
        android:text="@string/abc"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="@+id/radioButton4"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioButton
        android:id="@+id/radioButton2"
        android:layout_width="86dp"
        android:layout_height="38dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="112dp"
        android:layout_marginRight="112dp"
        android:layout_weight="0.13"
        android:checked="false"
        android:text="@string/healthgroup"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@+id/radioGroup"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioButton
        android:id="@+id/radioButton3"
        android:layout_width="86dp"
        android:layout_height="38dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_weight="0.13"
        android:checked="false"
        android:text="@string/rating"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    </RadioGroup>
</android.support.constraint.ConstraintLayout>
